--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -33,11 +33,10 @@ knitr::opts_chunk$set(
 
 ## Bayesian statistics
 
-Bayesian statistics is a mathematical paradigm for learning from data.
-It is especially well suited to facing the challenges posed by Section \@ref(surveillance).
-First, because it allows for principled and flexible integration of data with domain knowledge.
-Second, because uncertainty is handled as an integral part of the Bayesian paradigm.
-In this section I provide a brief overview.
+Bayesian statistics is a mathematical paradigm for learning information from data.
+It is especially well suited to facing the challenges posed by Section \@ref(surveillance) because it allows for principled and flexible integration of data with domain knowledge.
+Additionally, uncertainty is handled as an integral part of the Bayesian paradigm.
+This section provides a brief and opinionated overview.
 For a more complete introduction, I recommend @gelman2013bayesian or @mcelreath2020statistical.
 
 ### Bayesian modelling
@@ -51,15 +50,15 @@ The model is generative in the sense that it can be simulated from to obtain sam
 If these samples differ too greatly from what the analyst would expect, then the generative model does not capture their prior scientific understanding of the data, and can be refined.
 In this way, prior predictive checks [@gelman2013bayesian; Chapter 6] can be used to build generative models iteratively, with complexity added gradually.
 
-The model is usually constructed from two parts, known respectively as the likelihood $p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}})$ and the prior distribution $p(\boldsymbol{\mathbf{\phi}})$.
+The model is constructed from two parts, known respectively as the likelihood $p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}})$ and the prior distribution $p(\boldsymbol{\mathbf{\phi}})$.
 The joint distribution is obtained by the product
 \begin{equation}
 p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) = p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}}).
 \end{equation}
-The likelihood, as a function of $\boldsymbol{\mathbf{\phi}}$ with $\mathbf{y}$ fixed, reflects the probability of observing the data when the true value of the parameters is $\boldsymbol{\mathbf{\phi}}$.
-The prior distribution encapsulates beliefs about the parameters $\boldsymbol{\mathbf{\phi}}$ before the data is observed.
+The likelihood, as a function of $\boldsymbol{\mathbf{\phi}}$ with $\mathbf{y}$ fixed, reflects the probability of observing the data when the value of the parameters is $\boldsymbol{\mathbf{\phi}}$.
+The prior distribution encapsulates beliefs about the parameters $\boldsymbol{\mathbf{\phi}}$ before the data are observed.
 
-Recommendations for specifying the prior distribution vary.
+Recommendations for specifying prior distributions vary.
 The extent to which subjective information should be incorporated into the prior distribution, and in doing so influence the posterior distribution, is a central topic of discussion.
 Proponents of the objective Bayesian paradigm [@berger2006case] put forward that the prior distribution should be non-informative, so as not to introduce subjectivity into the analysis.
 That said, we shall see in Section \@ref(hierarchical-lgm-elgm) that the distinction between likelihood and prior distribution can be unclear.
@@ -80,7 +79,7 @@ p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) = \frac{p(\mathbf{y} \, | \, \b
 \end{equation}
 
 The primary goal in a Bayesian analysis is to obtain the posterior distribution.
-Unfortunately, most of the time it is intractable to calculate directly.
+Unfortunately, most of the time it is intractable to calculate analytically.
 This is because of the potentially high-dimensional integral
 \begin{equation}
 p(\mathbf{y}) = \int p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \text{d}\boldsymbol{\mathbf{\phi}}
@@ -88,19 +87,19 @@ p(\mathbf{y}) = \int p(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \text{d}\boldsymb
 in the denominator of Equation \@ref(eq:posterior).
 As such, although it is easy to evaluate $p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) \propto p(\mathbf{y} \, | \, \boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}})$, it is typically difficult to evaluate the posterior distribution itself.
 The difficulty in performing Bayesian inference in general may be thought of as analogous to the difficulty in calculating integrals.
-As with integration, in some cases closed form solutions are available.
+As with integration, in some cases closed form analytic solutions are available.
 Figure \@ref(fig:conjugate) illustrates one such case, where the prior distribution and posterior distribution are in the same family of probability distributions.
 
-A great variety of computational methods have been developed to tackle this problem [@martin2023computing].
+Many computational methods have been developed to tackle the problem of approximating the posterior distribution [@martin2023computing].
 They may broadly be divided into Monte Carlo algorithms, and deterministic approximations.
 
 #### Monte Carlo algorithms
 
-Monte Carlo algorithms [@robert2005monte] look to generate samples from the posterior distribution 
+Monte Carlo algorithms [@robert2005monte] aim to generate samples from the posterior distribution 
 \begin{equation}
 \boldsymbol{\mathbf{\phi}}_i \sim p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}), \quad i \in 1, \ldots M.
 \end{equation}
-These samples may be used in any future computations involving the posterior distribution.
+These samples may be used in any future computations involving functions of the posterior distribution.
 For example, if $G = G(\boldsymbol{\mathbf{\phi}})$ then the expectation of $G$ with respect to the posterior distribution can be approximated by
 \begin{equation}
 \mathbb{E}(G \, | \, \mathbf{y}) = \int G(\boldsymbol{\mathbf{\phi}}) p(\boldsymbol{\mathbf{\phi}} \, | \, \mathbf{y}) \text{d} \boldsymbol{\mathbf{\phi}} \approx \sum_{i = 1}^M G(\boldsymbol{\mathbf{\phi}}_i).
@@ -124,10 +123,10 @@ knitr::include_graphics("figures/bayesian/stan.png")
 
 #### Deterministic approximations
 
-In variational inference [VI; @blei2017variational] the posterior distribution is assumed to belong to a particular family of functions.
-Optimisation algorithms are then used to choose the best member of that family, typically by minimising the Kullback-Leibler divergence to the posterior distribution.
+In variational inference [VI; @blei2017variational] the approximate posterior distribution is assumed to belong to a particular family of functions.
+Optimisation algorithms are used to choose the best member of that family, typically by minimising the Kullback-Leibler divergence to the posterior distribution.
 VI is typically faster than Monte Carlo methods, especially for large datasets or models.
-However, it lacks theoretical guarantees and is often known to inaccurately estimate posterior variances [@giordano2018covariances].
+However, it lacks theoretical guarantees and is known to often inaccurately estimate posterior variances [@giordano2018covariances].
 Developing diagnostics to evaluate the accuracy of VI is an important area of ongoing research [@yao2018yes].
 The expectation maximisation [EM; @dempster1977maximum] and expectation propagation [EP; @minka2001expectation] algorithms are closely related to VI.
 
@@ -139,8 +138,7 @@ Unsure how much detail to go into here given that these approximations are the s
 
 ### Interplay between modelling and computation
 
-Bayesian computation aspires to abstract away calculation of the posterior distribution from the analyst.
-Modern computational techniques and software have made this aspiration a reality for many models.
+Modern computational techniques and software have succeeded in abstracting away calculation of the posterior distribution from the analyst for many models.
 However, computation of the posterior distribution remains intractable for a majority of models.
 As such, the analyst need not only to be concerned with choosing a model suitable for the data, but also choosing a model for which the posterior distribution is tractable in reasonable time.
 As such, there is an important interplay between modelling and computation, wherein models are bound by the limits of computation.
@@ -148,7 +146,7 @@ As computation improves, the space of models available to the analyst expands.
 
 ## Spatio-temporal statistics
 
-(ref:st) The spatial location of Cape Town, the capital of South Africa, could be considered a point. The ZF Mgcawu District Municipality is an example of an area. World AIDS Day, designated on the 1st of December every year, could be considered a point in time. The second fiscal quarter, running through April, May and June, and denoted by Q2 represents a period of time. In reality, both Cape Town and World AIDS Day are areas, rather than true point locations. Instances of infinitesimal point locations in everyday life are rare.
+(ref:st) The spatial location of Cape Town in South Africa could be considered a point. The ZF Mgcawu District Municipality on the other hand is an example of an area. World AIDS Day, designated on the 1st of December every year, could be considered a point in time. The second fiscal quarter, running through April, May and June, and denoted by Q2 represents a period of time. (In reality, both Cape Town and World AIDS Day are areas, rather than true point locations. Instances of infinitesimal point locations in everyday life are rare.)
 
 ```{r st, fig.cap="(ref:st)"}
 knitr::include_graphics("figures/bayesian/st.png")
@@ -170,7 +168,7 @@ In "The Design of Experiments" @fisher1936design observed likewise that neighbou
 This law can be formalised using spatial covariance functions.
 Spatial covariance functions are called isotropic when they apply equally in all directions, and stationary when they are invariant over space.
 
-    As well as space, an Tobler's first law extends to time.
+    As well as space, an Tobler's first law applies to time.
     Observations made close together in time tend to be similar.
     There is a field of time series analysis [@hyndman2018forecasting] to summarise in a couple of sentences.
 
@@ -205,7 +203,7 @@ Direct estimates of indicators of interest are either impossible or inaccurate i
 Small-area estimation [SAE; @pfeffermann2013new] methods aim to overcome the limitations of small data by sharing information.
 In the spatio-temporal setting sharing of information occurs across space and time.
 
-More generally, SAE methods are useful when data is limited for subpopulations of interest.
+More generally, SAE methods are useful when data are limited for subpopulations of interest.
 Subpopulations could be generated by the intersection of demographic variables such as age and gender, as well as spatio-temporal location.
 
 (ref:zmb-maps) Simulation of a simple random sample $y_i \sim \text{Bin}(m, p_i)$ with varying sample size ($m = 5, 25, 125$) in each of the $i = 1, \ldots, 156$ constituencies of Zambia. Direct estimates were obtained by the ratio $y_i / m$. Modelled estimates were obtained using a logistic regression with linear predictor given by an intercept and a spatial random effect. HIV estimates for Zambia have previously been generated at the district-level, comprising 116 spatial units. Moving forward, there is interest in generating estimates at the constituency level, as program planning is devolved locally. This figure is adapted from a presentation I gave for the Zambia HIV Estimates Technical Working Group, available from [`https://github.com/athowes/zambia-unaids`](https://github.com/athowes/zambia-unaids).
@@ -331,12 +329,12 @@ In Chapter \@ref(naomi-aghq), the Naomi small-area estimation model used to prod
 
 Large national household surveys provide the highest quality population-level information about HIV indicators in SSA.
 Demographic and Health Surveys (DHS) are funded by the United States Agency for International Development (USAID) and run every three to five years in most countries.
-Population-based HIV Impact Assessment (PHIA) surveys are funded by PEPFAR and run every two to three years in high HIV burden countries.
+Population-based HIV Impact Assessment (PHIA) surveys are funded by PEPFAR and run every four to five years in high HIV burden countries.
 
 ### Survey notation and key terms
 
 Consider a population of individuals $i = 1, \ldots, N$ with outcomes of interest $y_i$.
-A census is a type of survey where all individuals are sampled.
+A census is a type of survey where all individuals are selected.
 Supposing responses from all individuals were recorded, then any population means can be calculated directly.
 For example, if $G_i = G(y_i)$ then the population mean of $G$ is
 \begin{equation}
@@ -362,7 +360,7 @@ The survey design is called complex when the sampling probabilities for each ind
 
 Complex survey designs can offer both greater practicality and statistical efficiency than a SRS.
 However, particular care is required in analysing data collected using complex survey designs.
-Under a complex design, failing to take into account the unequal sampling probabilities will result in bias.
+Under a complex design, not accounting for unequal sampling probabilities will result in bias.
 That said, even for a SRS, nonresponse can cause analogous bias.
 
 ### Survey design
@@ -394,7 +392,7 @@ The overall selection probability of each household in cluster $j$ of stratum $h
 ### Survey analysis
 
 Suppose a complex survey is run with sampling probabilities $\pi_i$.
-The most popular method for taking into account that some individuals are more likely to be included in the survey than others is to overweight the responses of those unlikely to be included, and underweight the responses of those likely to be included.
+The standard method for taking into account that some individuals are more likely to be included in the survey than others is to overweight the responses of those unlikely to be included, and underweight the responses of those likely to be included.
 This can be achieved using design weights $\delta_i = 1 / \pi_i$, which can be thought of as the number of individuals in the population represented by the $i$th sampled individual.
 Let $P(R_i = 1 \, | \, S_i = 1) = \upsilon_i$ be the probability of response for sampled individual $i$.
 The problem of nonresponse can be treated in the same way using nonresponse weights $\gamma_i = 1 / \upsilon_i$, which analogously can be thought of as the number of sampled individuals represented by the $i$th recorded individual.
